# homeplusplus

./: .angulardoc.json  .gitignore  .gitmodules  README.md
backend/: CMakeLists.txt
backend/api/: Action.cpp  Action.h  ActionStorage.cpp  ActionStorage.h  Device.cpp  Device.h  DeviceAPI.h  DeviceRegistry.cpp  DeviceRegistry.h  DeviceStorage.cpp  DeviceStorage.h  DeviceType.cpp  DeviceType.h  Filter.cpp  Filter.h  IActionSerialize.h  IDeviceSerialize.h  IRuleSerialize.h  Resources.cpp  Resources.h  Rule.cpp  Rule.h  RulePermissions.h  RuleStorage.cpp  RuleStorage.h  SubActionImpls.cpp  SubActionImpls.h  User.h  action.proto  device.proto  rule.proto  rule_conditions.proto  sub_actions.proto
backend/cmake-modules/: FindMosquitto.cmake
backend/communication/: Authenticator.cpp  Authenticator.h  CookieVerify.cpp  CookieVerify.h  MQTT.cpp  MQTT.h  MQTTClient.cpp  MQTTClient.h  WebsocketChannel.cpp  WebsocketChannel.h  WebsocketCommunication.cpp  WebsocketCommunication.h  nRF24L01.cpp  nRF24L01.h  nRFTests.cpp  nRFTests.h  spi.cpp  spi.h
backend/config/: Config.h  Timings.h  WebsocketConfig.h
backend/core-api/: CoreDeviceAPI.cpp  CoreDeviceAPI.h
backend/database/: ActionsTable.h  DBActionSerialize.cpp  DBActionSerialize.h  DBDeviceSerialize.cpp  DBDeviceSerialize.h  DBEventHandler.cpp  DBEventHandler.h  DBHandler.cpp  DBHandler.h  DBRuleSerialize.cpp  DBRuleSerialize.h  DevicesTable.h  HeldTransaction.h  RulesTable.h  SQLiteDatabase.cpp  SQLiteDatabase.h  UsersTable.h
backend/events/: ActionsSocketHandler.cpp  ActionsSocketHandler.h  AuthEventHandler.cpp  AuthEventHandler.h  DevicesSocketHandler.cpp  DevicesSocketHandler.h  EventSystem.cpp  EventSystem.h  Events.h  LoadRequestHandler.cpp  LoadRequestHandler.h  ProfileSocketHandler.cpp  ProfileSocketHandler.h  RuleEventHandler.cpp  RuleEventHandler.h  RulesSocketHandler.cpp  RulesSocketHandler.h  SocketEvents.cpp  SocketEvents.h  UIEvents.h  WebsocketEventHandler.cpp  WebsocketEventHandler.h
backend/main/: ArgumentParser.h  Main.cpp  Main.h  SignalHandler.cpp  SignalHandler.h  test.proto
backend/plugins/: CMakeLists.txt
backend/plugins/hue-api/: CMakeLists.txt  HueAPI.cpp  HueAPI.h  HueDeviceType.cpp  HueDeviceType.h
backend/plugins/remotesocket-api/: CMakeLists.txt  RemoteSocketAPI.cpp  RemoteSocketAPI.h  RemoteSocketTransmitter.cpp  RemoteSocketTransmitter.h  RemoteSocketType.cpp  RemoteSocketType.h
backend/plugins/tasmota-api/: CMakeLists.txt  TasmotaAPI notes.txt  TasmotaAPI.cpp  TasmotaAPI.h  TasmotaDeviceType.cpp  TasmotaDeviceType.h  test.json
backend/test/: CMakeLists.txt  SilenceCout.h  TestMain.cpp
backend/test/api/: Action-test.cpp  ActionStorage-test.cpp  Rule-test.cpp  RuleCondition-test.cpp  RuleStorage-test.cpp  SubActionImpls-test.cpp
backend/test/communication/: Authenticator-test.cpp  TestWebsocketCommunication.h  WebsocketChannel-test.cpp  WebsocketCommunication-test.cpp
backend/test/database/: DBActionSerialize-test.cpp  DBRuleSerialize-test.cpp
backend/test/events/: ActionsSocketHandler-test.cpp  AuthEventHandler-test.cpp  EventSystem-test.cpp  RulesSocketHandler-test.cpp
backend/test/main/: ArgumentParser-test.cpp
backend/test/mocks/: JsonWrapper.h  MockActionImpl.h  MockActionSerialize.h  MockDeviceSerialize.h  MockEventHandler.h  MockRuleCondition.h  MockRuleSerialize.h  MockWebsocketServer.h
backend/test/old/api/: ActionSerializeUtils.h  DeviceRegistry.cpp
backend/test/old/communication/: TestWebsocketCommunication.h  WebsocketCommunication.cpp  spi.cpp
backend/test/old/database/: DBEventHandler.cpp  DBHandler.cpp  DBNodeSerialize.cpp  DBRuleSerialize.cpp
backend/test/old/events/: WebsocketEventHandler.cpp  WebsocketSocketHandler.cpp
backend/test/old/mocks/: MockDBHandler.cpp  MockDevice.h  MockDeviceAPI.h  MockEventHandler.h  MockFileControl.h  MockNRF.h  MockNodeCommunication.h  MockNodeManager.h  MockNodeSerialize.h  MockWebsocketServer.h
backend/test/old/standard-api/: Message.cpp  MessageSequence.cpp  NewNodeFinder.cpp  NodeCommunication.cpp  NodeData.cpp  NodeManager.cpp  NodePath.cpp  NodeSerializeUtils.h  Programmer.cpp
backend/test/old/utility/: OwnOptional.cpp
backend/test/utility/: FactoryRegistry-test.cpp  Logger-test.cpp
backend/utility/: Active.cpp  Active.h  AnyJson.h  FactoryRegistry.h  FileControl.h  LinuxFileControl.h  Logger.cpp  Logger.h  RDPAlgorithm.h  SimpleRange.h  consoleColor.h
frontend/: .angulardoc.json  .gitignore  README.md  angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  polyfills.ts  styles.css
frontend/src/app/: app-routing.module.spec.ts  app.component.html  app.module.ts  app.routes.ts  color-convert.module.ts
frontend/src/app/actions/: action-icons.ts  action-routing.module.spec.ts  action-routing.module.ts  action.service.ts  action.ts  actions.module.spec.ts  actions.module.ts
frontend/src/app/auth/: auth-guard.service.ts  auth-routing.module.spec.ts  auth-routing.module.ts  auth.module.ts  auth.service.ts
frontend/src/app/dashboard/: dashboard-card.ts  dashboard.component.css  dashboard.component.html  dashboard.component.ts
frontend/src/app/delete-dialog/: delete-dialog.component.html  delete-dialog.component.ts  delete-dialog.module.spec.ts  delete-dialog.module.ts
frontend/src/app/devices/: device-parser.spec.ts  device-parser.ts  device-routing.module.spec.ts  device-routing.module.ts  device.config.ts  device.service.ts  device.ts  devices.module.spec.ts  devices.module.ts
frontend/src/app/filter-list/: filter-list.module.spec.ts  filter-list.module.ts
frontend/src/app/login/: login.component.css  login.component.html  login.component.ts  login.service.ts
frontend/src/app/navigation/: navigation.component.html  (+2 more)
frontend/src/i18n/: messages.de.xlf  messages.xlf
libs/Freedom_NRF24L01_RPi/: Makefile  nRF24L01.cpp  nRF24L01.h
libs/Freedom_NRF24L01_RPi/Sources/: nRF24L01.cpp  nRF24L01.h
libs/polymorphic_value/: polymorphic_value.h
libs/rcswitch-pi/: CMakeLists.txt  RCSwitch.cpp  RCSwitch.h  send
libs/sqlite-amalgamation/: CMakeLists.txt  version.txt
(+201 files in other folders)
